# C

client_server/: CMakeLists.txt  client.c  server.c  util.c  util.h
data_structures/: CMakeLists.txt
data_structures/AVL/: CMakeLists.txt  avl.c
data_structures/BST/: CMakeLists.txt
data_structures/BST/include/: data.h  tree.h  treePrivate.h
data_structures/BST/src/: data.c  main.c  tree.c
data_structures/array/: CMakeLists.txt  array.c  util.c  util.h
data_structures/graphs/: CMakeLists.txt  graph.c  input.txt  list.c  list.h  queue.c  queue.h
data_structures/hash/: CMakeLists.txt  array.c  array.h  hash.c
data_structures/heap/: CMakeLists.txt  array.c  array.h  heap.c
data_structures/list/: CMakeLists.txt  list.c
data_structures/queue/: CMakeLists.txt  list.c  list.h  queue.c
data_structures/redblack/: CMakeLists.txt  rb.c
data_structures/stack/: CMakeLists.txt  stack.c
data_structures/trie/: CMakeLists.txt  dictionary.txt  trie.c  util.c  util.h
threading/: CMakeLists.txt  consprod_condvar.c  consprod_sem.c  queue.c  queue.h
