cmake_minimum_required(VERSION 3.10)
project(DATA_STRUCTURES)

add_subdirectory(array)
add_subdirectory(AVL)
add_subdirectory(BST)
add_subdirectory(graphs)
add_subdirectory(hash)
add_subdirectory(heap)
add_subdirectory(list)
add_subdirectory(queue)
add_subdirectory(redblack)
add_subdirectory(stack)
add_subdirectory(trie)